# roleplay

./: .env.example  .gitignore  Dockerfile  ENGINEERING_PRINCIPLES.md  LICENSE  LICENSE_COMMERCIAL  README.md  WORK_PLAN.md  docker-compose.yml  poc.checkpoint.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: gemini_review.py
.github/workflows/: ci.yml  gemini-review.yml
docs/: scenario-format.md
docs/engineering/: 01-party-model.md  02-environment-model.md  03-episode-model.md  04-memory-engine.md  05-simulation-engine.md  06-provider-abstraction.md  07-persistence.md  08-cli.md  09-api.md  10-deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts  ws.ts
frontend/src/components/: CreateSessionModal.tsx  DeriveModal.tsx  SessionInspector.tsx  SimulationViewer.tsx  YamlEditor.tsx
frontend/src/layouts/: Shell.tsx
frontend/src/pages/: SessionPage.tsx  SessionsPage.tsx
scenarios/: example.checkpoint.json  example.toml  example.yaml
scripts/: lint.sh
src/roleplay/: __init__.py  cli.py  config.py  generate.py  poc.py  scenario_yaml.py  validate.py
src/roleplay/api/: app.py  auth.py  runner.py  schemas.py
src/roleplay/api/routes/: health.py  sessions.py  simulation.py
src/roleplay/core/: __init__.py  environment.py  episode.py  party.py  simulation_state.py
src/roleplay/engine/: engine.py  observer.py  turn.py
src/roleplay/memory/: compaction.py  store.py
src/roleplay/persistence/: __init__.py  _serialization.py  base.py  sqlite.py
src/roleplay/persistence/migrations/: 001_initial.sql  002_episode_summary.sql  003_named_environments.sql  (+2 more)
src/roleplay/providers/: base.py  claude_provider.py  gemini.py  mock.py  registry.py
tests/: test_config.py  test_coverage_gaps.py  test_environments_yaml.py  test_generate.py  test_poc.py  test_smoke.py  test_validate.py
tests/api/: conftest.py  test_auth.py  test_generate.py  test_health.py  test_runner.py  test_sessions.py  test_simulation.py  test_websocket.py
tests/cli/: test_cli.py  test_scenario_yaml.py
tests/core/: test_environment.py  test_episode.py  test_party.py  test_simulation_state.py
tests/engine/: test_engine.py
tests/integration/: conftest.py  test_full_simulation.py
tests/memory/: test_compaction.py  test_memory_store.py
tests/persistence/: test_sqlite_persistence.py
tests/providers/: test_claude_provider.py  test_gemini.py  test_registry.py
