[project]
name = "roleplay"
version = "0.1.0"
description = "Multi-party interaction simulator — simulate negotiations, social dynamics, and organizational interactions driven by LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.13",
    "genbadge[coverage]>=1.1",
    "defusedxml>=0.7",   # used by genbadge
]

[project.scripts]
roleplay = "roleplay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roleplay"]

# ─── Ruff (lint + format) ───────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations (enforces type hints)
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN101",  # missing type for `self`
    "ANN102",  # missing type for `cls`
]

[tool.ruff.lint.isort]
known-first-party = ["roleplay"]

# ─── Mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
packages = ["roleplay"]
mypy_path = "src"

# ─── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
markers = [
    "integration: marks tests that call real LLM APIs (deselect with -m 'not integration')",
    "slow: marks tests that take more than a few seconds",
]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/roleplay"]
branch = true
omit = ["src/roleplay/cli.py"]   # CLI entry point tested via integration

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
